--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -179,7 +179,7 @@ application.properties nicht kommentiert werden:
 ....
 
 ==== Benutzeroberfläche
-*TODO*
+image::models/design/images/dialog.png[]
 
 ==== Verwendung externer Frameworks
 
