add sequence diagrams

--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -553,6 +553,13 @@ image::models/design/images/sd__orders_update__orders_update.jpg[]
 === Mitarbeiter
 image::models/design/images/add_and_delete_staff.png[]
 
+=== Räume
+image::models/design/images/rooms addRoom.png[]
+image::models/design/images/rooms bookFreeSlot.png[]
+image::models/design/images/rooms deleteRoom.png[]
+image::models/design/images/rooms listFreeSlots.png[]
+
+
 ////
 == Technische Schulden
 * Auflistung der nicht erreichten Quality Gates und der zugehörigen SonarQube Issues
