--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -483,6 +483,34 @@ image::models/design/images/rooms.png[]
 
 |===
 
+=== Finanzen
+image::models/design/images/finance.png[]
+|===
+|Klasse/Enumeration/Schnittstelle |Beschreibung
+
+|FinanceConstroller
+|Ein Spring Controller, der Anfragen bzgl. Financeübersicht und zudem Erstellung
+und Löschen von FinanceEinträge verarbeitet.
+
+|FinanceItem
+|Jeder FinanceItem hat eine eindeutige `id`,
+eine `price` , einen `name`, einen `amount`und eine `date`.
+
+|FinaceManager
+|Ein Dienst, der zuständig ist, die FinanceItem im System zu verwalten. Man kann dort FinanceItem Löschen und Hinfügen.
+
+|FinanceRepository
+|Die Schnittstelle erweitert die `CrudRepository` von Spring. Sie ist verantwortlich für die Persistenz
+der Financedaten.
+
+|FinanceEntryDataInitializer
+|Ein Formular von _SalesPoint_ für die Initialisierung von FinanceItems.
+
+|AddFinanceForm
+|Ein Formular um FinanceItem hinzufügen.
+
+|===
+
 === Rückverfolgbarkeit zwischen Analyse- und Entwurfsmodell
 
 [options="header", cols="1, 1"]
