--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -568,6 +568,12 @@ der Financedaten.
 |TimeTableEntry
 |TimeTableEntry
 
+|FinancialManagement
+|FinanceManager
+
+|FinancialItem
+|FinancialItem
+
 |===
 
 == Laufzeitsicht
