add order overview

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,9 @@ general.projectname = Miss-Mint store management
 general.brandname = Miss Mint Mending Points
 general.slogan = Repairs cheap and easy
 general.management = Management
+general.id = ID
+general.customer = Customer
+general.actions = Actions
 
 index.pleaselogin = Please log in to use the management software.
 
@@ -18,3 +21,4 @@ security.logout = Logout
 
 orders = Orders
 orders.receiving = Receiving
+orders.customer.item = Customer Item
