--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,6 +1,8 @@
 general.projectname = Miss-Mint-Filialmanagement
 general.slogan = Reparaturen billig und leicht
 general.management = Verwaltung
+general.customer = Kunde
+general.actions = Aktionen
 
 index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutzen.
 
@@ -17,3 +19,4 @@ security.logout = Abmelden
 
 orders = Aufträge
 orders.receiving = Annahme
+orders.customer.item = Kundengegenstand
