add detail view for order

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-general.projectname = Miss-Mint store management
+general.projectname = Miss (Mint store management)
 general.brandname = Miss Mint Mending Points
 general.slogan = Repairs cheap and easy
 general.management = Management
@@ -22,3 +22,30 @@ security.logout = Logout
 orders = Orders
 orders.receiving = Receiving
 orders.customer.item = Customer Item
+orders.details = Order Details
+orders.inbound = Inbound Date
+orders.expectedfinished = Expected Finishing Date
+orders.finished = Finishing Date
+orders.state = Order State
+orders.state.WAITING = Waiting
+orders.state.IN_PROGRESS = In Progress
+orders.state.FINISHED = Finished
+orders.state.STORED = Stored
+orders.state.PICKED_UP = Picked Up
+orders.state.CHARITABLE_USED = Charitable Used
+orders.service = Service
+orders.service.kludge-heels = Kludge (Heels)
+orders.service.kludge-sole = Kludge (Sole)
+orders.service.kludge-seam = Kludge (Seam)
+orders.service.sewing-buttons = Sewing (Buttons)
+orders.service.sewing-seam = Sewing (Seam)
+orders.service.sewing-patch = Sewing (Patch)
+orders.service.locksmith-copy = Locksmith (Copy)
+orders.service.locksmith-engrave = Locksmith (Engrave)
+orders.service.cleaning-laundry = Cleaning (Laundry)
+orders.service.cleaning-suits = Cleaning (Suits)
+orders.service.cleaning-leather = Cleaning (Leather)
+orders.service.electronics-replace = Electronics (Replace)
+orders.service.electronics-brazing = Electronics (Brazing)
+orders.service.grindery-scissors = Grindery (Scissors)
+orders.service.grindery-knifes = Grindery (Knifes)
