--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -2,7 +2,7 @@ general.projectname = Miss-Mint-Filialmanagement
 general.slogan = Reparaturen billig und leicht
 general.management = Verwaltung
 general.customer = Kunde
-general.actions = Aktionen
+general.actions =m Aktionen
 
 index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutzen.
 
@@ -20,3 +20,30 @@ security.logout = Abmelden
 orders = Aufträge
 orders.receiving = Annahme
 orders.customer.item = Kundengegenstand
+orders.details = Auftragsdetails
+orders.inbound = Eingangsdatum
+orders.expectedfinished = Erwartetes Fertigstellungsdatum
+orders.finished = Fertigstellungsdatum
+orders.state = Auftragszustand
+orders.state.WAITING = Wartend
+orders.state.IN_PROGRESS = In Bearbeitung
+orders.state.FINISHED = Fertiggestellt
+orders.state.STORED = Lagernd
+orders.state.PICKED_UP = Abgeholt
+orders.state.CHARITABLE_USED = Karitativ Verwertet
+orders.service = Service
+orders.service.kludge-heels = Flickschusterei (Absätze)
+orders.service.kludge-sole = Flickschusterei (Sohlen)
+orders.service.kludge-seam = Flickschusterei (Nähte)
+orders.service.sewing-buttons = Nähservice (Knöpfe)
+orders.service.sewing-seam = Nähservice (Nähte)
+orders.service.sewing-patch = Nähservice (Flicken)
+orders.service.locksmith-copy = Schlüsseldienst (Kopieren)
+orders.service.locksmith-engrave = Schlüsseldienst (Gravieren)
+orders.service.cleaning-laundry =  Schnellreinigung und Heißmangel (Wäsche)
+orders.service.cleaning-suits =  Schnellreinigung und Heißmangel (Anzüge)
+orders.service.cleaning-leather =  Schnellreinigung und Heißmangel (Leder)
+orders.service.electronics-replace = Elektrowerkstatt (Ersetzen)
+orders.service.electronics-brazing = Elektrowerkstatt (Löten)
+orders.service.grindery-scissors = Scherenschleiferei (Scheren)
+orders.service.grindery-knifes = Scherenschleiferei (Messer)
