--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ general.management = Management
 general.id = ID
 general.customer = Customer
 general.actions = Actions
+general.details = Details
 
 index.pleaselogin = Please log in to use the management software.
 
@@ -49,3 +50,7 @@ orders.service.electronics-replace = Electronics (Replace)
 orders.service.electronics-brazing = Electronics (Brazing)
 orders.service.grindery-scissors = Grindery (Scissors)
 orders.service.grindery-knifes = Grindery (Knifes)
+orders.order = Order
+orders.customer.name = Customer's Name
+orders.description = Description of the Item
+orders.receiving.calculate = Calculate Price
