--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -2,7 +2,8 @@ general.projectname = Miss-Mint-Filialmanagement
 general.slogan = Reparaturen billig und leicht
 general.management = Verwaltung
 general.customer = Kunde
-general.actions =m Aktionen
+general.actions = Aktionen
+general.details = Details
 
 index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutzen.
 
@@ -47,3 +48,7 @@ orders.service.electronics-replace = Elektrowerkstatt (Ersetzen)
 orders.service.electronics-brazing = Elektrowerkstatt (Löten)
 orders.service.grindery-scissors = Scherenschleiferei (Scheren)
 orders.service.grindery-knifes = Scherenschleiferei (Messer)
+orders.order = Auftrag
+orders.customer.name = Name des Kunden
+orders.description = Kurzbeschreibung des Gegenstandes
+orders.receiving.calculate = Kosten berechnen
