--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -13,7 +13,16 @@ materials = Materialien
 
 finance.balance = Bilanzen
 
-users.managment = Nutzer-Verwaltung
+users.management = Nutzerverwaltung
+users.title=Nutzerübersicht
+users.remove=Entlassen
+users.edit=Bearbeiten
+users.edit.save=Änderungen speichern
+users.edit.title=Nuzerbearbeitung
+users.registration.title=Nutzerregistrierung
+users.registration.userdata=Nutzerdaten
+users.registration.password=Passwort
+users.registration.submit=Registrieren
 
 security.login = Anmelden
 security.logout = Abmelden
