--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,7 +14,16 @@ materials = Materials
 
 finance.balance = Balance
 
-users.managment = User Management
+users.management = User Management
+users.title=User Overview
+users.remove=Remove
+users.edit=Edit
+users.edit.save=Save changes
+users.edit.title=User Edit
+users.registration.title=User Registration
+users.registration.userdata=User Data
+users.registration.password=Password
+users.registration.submit=Submit
 
 security.login = Login
 security.logout = Logout
