add cost page wip

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,3 +54,6 @@ orders.order = Order
 orders.customer.name = Customer's Name
 orders.description = Description of the Item
 orders.receiving.calculate = Calculate Price
+orders.receiving.price = Receiving - Price
+orders.receiving.checkbox.paid = The customer paid {0}.
+orders.receiving.generate = Generate Ticket
