--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -52,3 +52,6 @@ orders.order = Auftrag
 orders.customer.name = Name des Kunden
 orders.description = Kurzbeschreibung des Gegenstandes
 orders.receiving.calculate = Kosten berechnen
+orders.receiving.price = Annahme - Kosten
+orders.receiving.checkbox.paid = Der Kunde hat {0} bezahlt.
+orders.receiving.generate = Auftragszettel Generieren
