add ticket page

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -4,6 +4,8 @@ general.management = Verwaltung
 general.customer = Kunde
 general.actions = Aktionen
 general.details = Details
+general.print = Drucken
+general.price = Preis
 
 index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutzen.
 
@@ -64,3 +66,5 @@ orders.receiving.calculate = Kosten berechnen
 orders.receiving.price = Annahme - Kosten
 orders.receiving.checkbox.paid = Der Kunde hat {0} bezahlt.
 orders.receiving.generate = Auftragszettel Generieren
+orders.ticket = Auftragszettel
+orders.ticket.id = Auftragsnummer
