--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,8 @@ general.id = ID
 general.customer = Customer
 general.actions = Actions
 general.details = Details
+general.print = Print
+general.price = Price
 
 index.pleaselogin = Please log in to use the management software.
 
@@ -66,3 +68,5 @@ orders.receiving.calculate = Calculate Price
 orders.receiving.price = Receiving - Price
 orders.receiving.checkbox.paid = The customer paid {0}.
 orders.receiving.generate = Generate Ticket
+orders.ticket = Ticket
+orders.ticket.id = Order ID
