Require names to be not blank

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -1,3 +1,6 @@
 ReceivingForm.customer.NotBlank = Der Name des Kunden darf nicht leer sein.
 ReceivingForm.description.NotBlank = Die Kurzbeschreibung darf nicht leer sein.
 ReceivingForm.service.NotNull = Bitte wählen Sie eine Dienstleistung aus.
+RegistrationForm.name.NotBlank = Name darf nicht leer sein.
+RegistrationForm.password.NotEmpty = Password darf nicht leer sein.
+EditStaffForm.name.NotBlank = Name darf nicht leer sein.
