--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -431,7 +431,7 @@ der Mitarbeiterdaten.
 |===
 
 === Inventar
-image::models/design/images/Inventory.small.png[]
+image::models/design/images/Inventory.png[]
 [options="header", cols="1, 4"]
 |===
 |Klasse/Enumeration/Schnittstelle 
