add return button

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -70,3 +70,4 @@ orders.receiving.checkbox.paid = The customer paid {0}.
 orders.receiving.generate = Generate Ticket
 orders.ticket = Ticket
 orders.ticket.id = Order ID
+orders.pickup.return = Return
