--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -68,3 +68,4 @@ orders.receiving.checkbox.paid = Der Kunde hat {0} bezahlt.
 orders.receiving.generate = Auftragszettel Generieren
 orders.ticket = Auftragszettel
 orders.ticket.id = Auftragsnummer
+orders.pickup.return = Zurückgeben
