add pickup feature tests wip

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -71,3 +71,8 @@ orders.receiving.generate = Generate Ticket
 orders.ticket = Ticket
 orders.ticket.id = Order ID
 orders.pickup.return = Return
+orders.pickup.give_back = Give {0} back to {1}
+orders.pickup.compensation.request = Please give the customer a compensation of {0}.
+orders.pickup.extra_costs.request = Please charge the customer {0}.
+orders.pickup.transaction = Transaction handled.
+orders.pickup.submit = Complete Order
